@@ -1,5 +1,10 @@
 CHANGELOG
 
+2005/10/27           dirvishlib.pl        13.1       dirvish-1.3.1
+
+Fixed the expire rules to allow a "#" in the file name, escaped 
+as a "\#" in the config file.
+
 2005/10/01           Build.PL             13.1       dirvish-1.3.1
                      INSTALL.pod          13.1       dirvish-1.3.1
  
